SAIIASA-5 Navbar functionality

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -43,6 +43,8 @@
   /*custom colors*/
   --color-beige-light: var(--beige-light);
   --color-beige-dark: var(--beige-dark);
+  --color-burgundy: var(--burgundy);
+  --color-lilac: var(--lilac);
 }
 
 :root {
@@ -81,6 +83,8 @@
   /*custom colors*/
   --beige-light: oklch(0.9846 0.0124 75.37);
   --beige-dark: oklch(0.9458 0.0114 71.9);
+  --burgundy: oklch(0.3763 0.0836 5.39);
+  --lilac: oklch(0.8324 0.0752 288.04);
 }
 
 @layer base {
