SAIIASA-10 add typography components

--- a/client/src/containers/landing-page/index.module.css
+++ b/client/src/containers/landing-page/index.module.css
@@ -4,8 +4,8 @@
 }
 
 .heroBackgroundContainer {
-  background-size: 100%;
-  background-position: center top 10vh;
+  background-size: 200%;
+  background-position: right 15% top 40vh;
 }
 
 .guidedExplorationBackgroundContainer {
