SAIIASA-18 Feedback Button

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -43,13 +43,15 @@
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
 
-  /*custom colors*/
+  /* theme colors*/
   --color-beige-light: var(--beige-light);
   --color-beige-dark: var(--beige-dark);
   --color-burgundy: var(--burgundy);
   --color-burgundy-light: var(--burgundy-light);
   --color-burgundy-dark: var(--burgundy-dark);
   --color-lilac: var(--lilac);
+  /* custom colors */
+  --color-red-orange: var(--red-orange);
 }
 
 :root {
@@ -87,13 +89,15 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-  /*custom colors*/
+  /*theme colors*/
   --beige-light: oklch(0.9846 0.0124 75.37);
   --beige-dark: oklch(0.9458 0.0114 71.9);
   --burgundy: oklch(0.3763 0.0836 5.39);
   --burgundy-light: oklch(0.8208 0.0481 359.87);
   --burgundy-dark: oklch(0.3287 0.0699 5.21);
   --lilac: oklch(0.8324 0.0752 288.04);
+  /* custom colors  */
+  --red-orange: oklch(0.6727 0.1553 34.03);
 }
 
 @layer base {
